--- a/lib/www/index.html
+++ b/lib/www/index.html
@@ -12,10 +12,10 @@ function getUrlParameter(sParam)
 {
     var sPageURL = window.location.search.substring(1);
     var sURLVariables = sPageURL.split('&');
-    for (var i = 0; i < sURLVariables.length; i++) 
+    for (var i = 0; i < sURLVariables.length; i++)
     {
         var sParameterName = sURLVariables[i].split('=');
-        if (sParameterName[0] == sParam) 
+        if (sParameterName[0] == sParam)
         {
             return sParameterName[1];
         }
@@ -31,9 +31,9 @@ if (id) {
         .done( function(data) {
 	    new QRCode(document.getElementById("qrcode"), data.URI);
             $("<p />").text(data.memo).appendTo($("p#reason"));
-            $("<p />").text(data.amount/100000000 + "BTC").appendTo($("p#amount"));
+            $("<p />").text(data.amount/100000000 + "LBC").appendTo($("p#amount"));
 	    $("a").attr("href", data.URI);
-            $("<p />").text("Powered by Electrum").appendTo($("p#powered"));
+            $("<p />").text("Powered by Lbryum").appendTo($("p#powered"));
 	    $(function () {
 		var current;
 		var max = 100;
@@ -76,7 +76,7 @@ ws.onmessage = function (evt) {
 
 
 // See http://stackoverflow.com/questions/29186154/chrome-clicking-mailto-links-closes-websocket-connection
-$(document).on('click', 'a[href^="bitcoin:"]', function (e) {
+$(document).on('click', 'a[href^="lbry:"]', function (e) {
     e.preventDefault();
     var btcWindow = window.open($(e.currentTarget).attr('href'));
     btcWindow.close();
